# dissect

./: CMakeLists.txt  Makefile
cmake/: CheckLinkerFlag.cmake  LibraryUtils.cmake
cmake/modules/: FindMKL.cmake
src/: configure.scan  covariancematrix.cpp  genotypebgen.cpp  main.cpp
